[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "albs-sign-lib"
version = "0.1.0"
description = "Build System Sign Library"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Maxim Petukhov", email = "mpetuhov@almalinux.org" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pydantic==2.9.2",
    "pycurl==7.45.3",
    "plumbum==1.9.0",
    "python-gnupg==0.5.3",
    "pgpy==0.6.0",
    "pexpect==4.9.0",
    "requests==2.32.3",
    "albs-common-lib @ git+https://github.com/AlmaLinux/albs-common-lib@0.1.1"
]

[project.optional-dependencies]

dev = [
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "pyfakefs==5.6.0",
    "black==24.8.0",
    "pylint==3.3.1",
    "isort[colors]==5.13.2",
    "bandit[toml]==1.7.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
profile = "black"
split_on_trailing_comma = true

[tool.black]
line-length = 80
skip-string-normalization = true
# see https://black.readthedocs.io/en/stable/the_black_code_style/future_style.html#preview-style
preview = true
enable-unstable-feature = ["hug_parens_with_braces_and_square_brackets"]

[tool.pylint]
max-line-length = 80

# Minimum line length for functions/classes that require docstrings
docstring-min-length = 50

# https://pylint.readthedocs.io/en/stable/user_guide/checkers/features.html
disable = [
    "C0114", # missing-module-docstring
    "R0902", # too-many-instance-attributes
    "R0913", # too-many-arguments
    "W1514", # unspecified-encoding
]

[tool.coverage.run]
source = ['.']

[tool.coverage.report]
skip_empty = true
include = ['src/alb_sign_lib/*']

[tool.pytest.ini_options]
pythonpath = '.'
testpaths = ['tests']
